# ML-K8s-Fastapi

./: Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: docker-image.yml  lint.yml
k8s/: deployment.yaml  service.yaml
src/: iris_model.pkl  main.py  model.py
tests/: test_main.py
